# MAZAALAI

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
admin/: .prettierrc  Dockerfile  nuxt.config.ts  package.json
admin/assets/: main.scss  settings.scss
admin/layouts/: default.vue  login.vue
admin/middleware/: auth.ts
admin/pages/: index.vue  login.vue
admin/plugins/: toast.ts  vuetify.ts
admin/server/: userApi.ts
admin/store/: authStore.ts
admin/types/: AuthTypes.ts
admin/utils/: validates.ts
back/: .flake8  .gcloudignore  .isort.cfg  Dockerfile  alembic.ini  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 80637e00f2f2_user_models.py
back/app/: main.py  seeder.py
back/app/core/: auth.py  config.py  security.py
back/app/crud/: _base.py  user.py
back/app/db/: int_enum.py  session.py
back/app/middelwares/: db_session.py
back/app/models/: user.py
back/app/schemas/: user.py
back/app/seeds/: user_seed.py
back/app/seeds/datas/: users.json
back/app/utils/: functions.py
back/app/v1/: api_user.py  deps.py
back/app/v1/common/: auth.py
docs/: pull_request_template.md
front/: Dockerfile  package-lock.json
front-end/: package.json
front-end/src/button/: YearPicker.tsx
front-end/src/components/: CustomTable.tsx  Player.tsx
front-end/src/layout/: MainLayout.tsx
front-end/src/navigation/: Navbar.tsx
front-end/src/pages/: _app.tsx  matches.tsx  stats.tsx  teams.tsx
front-end/src/utils/: types.ts
front/src/layout/: Meta.tsx
secret/: .env.example
(+7 files in other folders)
